8025775: JNI warnings in TryXShmAttach Reviewed-by: art, anthony